frontend/css/homepage.css
@font-face {
    font-family: 'Plovdiv Script';
    src: url('../../resources/PlovdivTypeface-Fonts/PlovdivTypeface-Fonts/OTF/PlovdivSans.otf');
    font-weight: light;
    font-style: normal;
}

:root {
    --main-color: #CDEAEE;
    --color-dark: #1D2231;
    --text-grey: #506463;
    --text-on-dark-background: #FCFCFC;
    font-family: 'Plovdiv Script', 'PlovdivSans';
    color: var(--text-grey);
}


* {
    padding: 0;
    background: #FCFCFC;
    margin: 0;
    box-sizing: border-box;
    list-style-type: none;
    text-decoration: none;
    position: relative;
}

/* .sidebar {
    width: 345px;
    position: fixed;
    left: 0;
    top: 0;
    height: 100%;
    background: var(--main-color);
    color: var(--text-on-dark-background);
    z-index: 100;
    transition: width 300ms;
}

.sidebar-brand {
    height: 90px;
    padding: 1rem 0rem 1rem 2rem;
    color: var(--text-on-dark-background)
}

.sidebar-brand span {
    display: inline-block;
    padding-right: 1rem;
}

.sidebar-menu {
    margin-top: 1rem;
}

.sidebar-menu li {
    width: 100%;
    margin-bottom: 1.7em;
    padding-left: 1.2rem;
}

.sidebar-menu a {
    padding-left: 1rem;
    display: block;
    color: var(--text-on-dark-background);
    font-size: 1.1rem;
}

.sidebar-menu li.active a {
    background: #fff;
    padding-top: 1rem;
    padding-bottom: 1rem;
    color: var(--main-color);
    border-radius: 30px 0px 0px 30px;
}

.sidebar-menu a span:first-child {
    font-size: 1.5rem;
    padding-right: 1rem;
}*/

.site-logo {
    height: 6.5%;
    width: 6.5%;
    object-fit: cover;
    margin-right: 3%;
    margin-left: 10%;
}

/*
#nav-toggle:checked+.sidebar {
    cursor: pointer;
    width: 70px;
}

#nav-toggle:checked+.sidebar .sidebar-brand,
#nav-toggle:checked+.sidebar li {
    padding-left: 1rem;
    text-align: center;
}

#nav-toggle:checked+.sidebar li a {
    padding-left: 0rem;
} 
#nav-toggle:checked+.sidebar .sidebar-brand h2 span:last-child,
#nav-toggle:checked+.sidebar li a span:last-child {
    display: none;
}
*/
/* 
#nav-toggle:checked~.main-content {
    margin-left: 70px;
} 

#nav-toggle:checked~.main-content header {
    width: calc(100% - 70px);
    left: 70px;
} */

header {
    background: #FCFCFC;
    display: flex;
    justify-content: right;
    padding: 1rem;
    /* box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1); */
    position: fixed;
    width: 100%;
    top: 0;
    z-index: 100;
    transition: left 300ms;
}

#nav-toggle {
    display: none;
}

header h2 {
    color: #222;
}

header label span {
    font-size: 1.7rem;
}

/* .search-wrapper {
    border: 1px solid #ccc;
    border-radius: 30px;
    height: 50px;
    display: flex;
    align-items: center;
    overflow-x: hidden;
}

.search-wrapper span {
    display: inline-block;
    padding: 0rem 1rem;
    font-size: 1.5rem;
}

.search-wrapper input {
    height: 100%;
    padding: 0.5rem;
    border: none;
    outline: none;
} */

.logout-wrapper, 
.home-wrapper, 
.map-wrapper, 
.about-us-wrapper {
    font-weight: bold;
    display: flex;
    align-items: center;
    text-align: center;
}

#accountIcon {
    margin-right: 0.5rem;
}

/* .user-wrapper small,
.home-wrapper small, 
.map-wrapper small, 
.about-us-wrapper small {
    display: inline-block;
    color: var(--text-grey);
} */

main {
    margin-top: 140px;
    min-height: calc(100vh - 90px);
}

.main-text,
.subtitle {
    padding-left: 3%;
    padding-bottom: 3%;
}

.title-text h1 {
    display: inline;
}

.title-text .detskite {
    color: #F24630;
}

.title-text .ploshtadki {
    color: #FECD1B;
}

.title-page {
    box-sizing: border-box;
    background-image: url("../../resources/background.jpg");
    background-position: center;
    width: 100%;
    height: 110vh;
    background-size: cover;
}

.map-page {
    padding: 3%;
    padding-top: 5%;
    display: flex;
    flex-direction: row;
}


.map-view img {
    width: 600px;
}

 
.map-title,
.map-title-last,
.map-page-main-text,
.number-of-playgrounds {
    padding-right: 3rem;
    text-align: right;
}

.map-page-main-text {
    text-align: justify;
}

.map-title,
.map-title-last {
    color: #F24630;
}

.map-title-last {
    padding-bottom: 20%;
}

.number-of-playgrounds {
    padding-top: 15%;
    font-size: 70px;
    font-weight: bold;
}

.number-of-playgrounds-text {
    margin-top: 0%;
    font-size: medium;
    font-weight: normal;
}

.add-playground-btn {
    background-color: #CDEAEE;
    color: var(--text-grey);
    height: 50px;
    width: 50%;
    border-radius: 15px;
    border: 0;
    outline: 0;
    cursor: pointer;
    transition: background 1s;
    font-family: 'Plovdiv Script', 'PlovdivSans';
}

.add-playground-btn i {
    background-color: #CDEAEE;
    color: var(--text-grey);
}

/* ////////////////////////////////////////////////////// */

.tiles {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 2rem;
    margin-top: 1rem;
}

.single-tile {
    display: flex;
    justify-content: space-between;
    padding: 2rem;
    border-radius: 5px;
    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
}

.single-tile div:first-child span {
    color: var(--text-grey);
}

.single-tile div:last-child span {
    font-size: 3rem;
    color: var(--main-color);
}

.single-tile:last-child {
    background: var(--main-color);
}

.single-tile:last-child h1,
.single-tile:last-child div:last-child span,
.single-tile:last-child div:first-child span {
    color: #FCFCFC;
}

.recent-grid {
    margin-top: 3.5rem;
}

.card {
    background: #FCFCFC;
    border-radius: 5px;
}

.card-header {
    padding: 1rem;
}

.card-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    border-bottom: 1px solid #FCFCFC;
}

.card-header-btns {
    align-items: right;
}
/* ... */

